# ddd-learning-project

./: .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
.github/workflows/: test.yaml
domains/auctions/: auctions.py  service.py
domains/auctions/tests/: test_create.py
src/common/interfaces/: base.py  objects.py
src/common/interfaces/repositories/: auctions.py  base.py  users.py
src/domains/: users.py
src/domains/auctions/: dtos.py  enums.py  errors.py  objects.py  service.py
src/domains/auctions/tests/: stubs.py  test_create.py  test_get.py
