[project]
name = "uv-tests"
version = "0.1.0"
description = "DDD learning project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-random-order>=1.1.1",
]


[tool.pytest]
addopts = "-v --cov=uv --cov-report=term-missing --cov-report=html --random-order"
testpaths = "**/tests/**"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
    "mypy>=1.12.1",
]
